--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@ body{
     text-align: center;
     font-family:  Arial, Helvetica, sans-serif;
     line-height: 1;
+    border-top-left-radius:30px;
+    border-bottom-right-radius:30px;
 }
 .value{
     background-color: white;
@@ -26,6 +28,8 @@ body{
     font-family:  Arial, Helvetica, sans-serif;
     padding-left: 3%;
     padding-right: 5%;
+    border-top-left-radius:30px;
+    border-bottom-right-radius:30px;
 }
 .button{
     background-color:RGB(1,50,67);
